--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "final-project",
+  "name": "diary-of-a-low-res-student",
   "version": "1.0.0",
   "description": "A digital diary of my experience as an NYU Low Res Student.",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite",
+    "build": "vite build"
   },
   "author": "Kami Karras",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "three": "^0.159.0",
+    "vite": "^5.0.4"
+  }
 }
