--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "diary-of-a-low-res-student",
   "version": "1.0.0",
   "description": "A digital diary of my experience as an NYU Low Res Student.",
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite",
-    "build": "vite build"
+    "start:watch": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "Kami Karras",
   "license": "ISC",
   "dependencies": {
-    "three": "^0.159.0",
-    "vite": "^5.0.4"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "three": "^0.159.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
