fix syntax issue

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
-    "functions": [
+    "functions": 
         {
             "index.js": {
                 "memory": 3008
             }
         }
-    ]
+    
 }
