--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "server": "nodemon server.js",
     "deploy": "vercel --prod",
-    "preview": "vite preview"
+    "preview": " vite build && vite preview"
   },
   "author": "Kami Karras",
   "license": "ISC",
