--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "quickmongo": "^5.2.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "three": "^0.159.0",
