--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "quickmongo": "^5.2.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "three": "^0.159.0",
