--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "three": "^0.159.0",
+    "troika-three-text": "^0.49.1",
     "vite-express": "^0.11.0"
   },
   "devDependencies": {
